--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <properties>
         <version.platform>[1.7.2,2)</version.platform>
         <version.junit5>[5.7.2,6)</version.junit5>
-        <version.bytebuddy>1.14.13</version.bytebuddy>
+        <version.bytebuddy>1.14.15</version.bytebuddy>
         <version.mockito>4.11.0</version.mockito>
         <exclude.testfactory-tests.on.jupiter.5.7.or.earlier>
             Reliable support for Jupiter @TestFactory starts at version 5.8.x
@@ -602,6 +602,10 @@ reevaluated once-in-while by running tests with this profile enabled!
             <id>bytebuddy_default</id>
             <!-- Placeholder for sticking to ByteBuddy version that is specified
                  by default (non-profile) properties declaration! -->
+        </profile>
+        <profile>
+            <id>bytebuddy_1.14.12</id><!-- Introduced at Mockito-5.11 -->
+            <properties><version.bytebuddy>1.14.12</version.bytebuddy></properties>
         </profile>
         <profile>
             <id>bytebuddy_1.14.11</id><!-- Introduced at Mockito-5.9 -->
