Configure javadoc and have license as metainf in the javadoc jar
Java API detection makes javadoc link to API javadocs for JDK-6 - no good
Instead disable it and have links to JDK-17 javadoc. - I.e. here is
neither need nor intention to have LazyParams encourage use of old JDK.

--- a/pom.xml
+++ b/pom.xml
@@ -255,11 +255,35 @@
             <resource>
                 <directory>${basedir}</directory>
                 <includes>
-                  <include>LICENSE</include>
+                    <include>LICENSE</include>
                 </includes>
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <id>license_as_javadoc_metainf</id>
+                        <phase>process-resources</phase>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/apidocs/META-INF</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}</directory>
+                                    <includes>
+                                        <include>LICENSE</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-toolchains-plugin</artifactId>
                 <version>3.1.0</version>
@@ -276,6 +300,17 @@
                             <version>${version.test.jdk}</version>
                         </jdk>
                     </toolchains>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+                <configuration>
+                    <legacyMode>true</legacyMode>
+                    <detectJavaApiLink>false</detectJavaApiLink>
+                    <jdkToolchain>
+                        <version>17</version>
+                    </jdkToolchain>
                 </configuration>
             </plugin>
             <plugin>
