--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout Action
         uses: actions/checkout@v4
@@ -35,6 +37,6 @@ jobs:
           git config user.email "${GITHUB_ACTOR}"
           git config user.name "GitHub Actions"
       - name: Maven Release
-        run: mvn --batch-mode clean release:prepare release:perform | grep --line-buffered -v Download
+        run: mvn --batch-mode clean release:prepare release:perform
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
