--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,17 @@
     <name>LazyParams</name>
     <url>http://lazyparams.org</url>
     <description>
-        /* One-liner parametrization of unit tests ...*/
 
+        /* One-liner parametrization of unit tests: */
         int parameterValue = pickValue("myData", 1,2,3);
 
-        /*   myTest() ✔
-         *   ├─ myTest myData=1 ✔
-         *   ├─ myTest myData=2 ✔
-         *   └─ myTest myData=3 ✔
-         */
     </description>
+    <!--The above one-liner inside regular test-method myTest() will produce these test-executions:
+           myTest() ✔
+           ├─ myTest myData=1 ✔
+           ├─ myTest myData=2 ✔
+           └─ myTest myData=3 ✔
+    -->
     <inceptionYear>2024</inceptionYear>
     <licenses>
         <license>
