Make javadoc for "showcase" package-summary much prettier by having a custom-made doclet exclude links to the generated technicality interfaces within ensembles.

--- a/pom.xml
+++ b/pom.xml
@@ -319,6 +319,9 @@
                 <configuration>
                     <legacyMode>true</legacyMode>
                     <detectJavaApiLink>false</detectJavaApiLink>
+                    <doclet>org.lazyparams.demo.ge17.LazyparamsDoclet</doclet>
+                    <docletPath>${project.build.testOutputDirectory}</docletPath>
+                    <excludePackageNames>org.lazyparams.internal</excludePackageNames>
                     <jdkToolchain>
                         <version>17</version>
                     </jdkToolchain>
