--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <properties>
         <version.platform>[1.7.2,2)</version.platform>
         <version.junit5>[5.7.2,6)</version.junit5>
-        <version.bytebuddy>1.14.15</version.bytebuddy>
+        <version.bytebuddy>1.15.11</version.bytebuddy>
         <version.mockito>4.11.0</version.mockito>
         <exclude.testfactory-tests.on.jupiter.5.7.or.earlier>
             Reliable support for Jupiter @TestFactory starts at version 5.8.x
@@ -597,6 +597,18 @@ reevaluated once-in-while by running tests with this profile enabled!
             <id>bytebuddy_default</id>
             <!-- Placeholder for sticking to ByteBuddy version that is specified
                  by default (non-profile) properties declaration! -->
+        </profile>
+        <profile>
+            <id>bytebuddy_1.15.4</id><!-- Introduced at Mockito-5.14 -->
+            <properties><version.bytebuddy>1.15.4</version.bytebuddy></properties>
+        </profile>
+        <profile>
+            <id>bytebuddy_1.15.0</id><!-- Introduced at Mockito-5.13 -->
+            <properties><version.bytebuddy>1.15.0</version.bytebuddy></properties>
+        </profile>
+        <profile>
+            <id>bytebuddy_1.14.15</id><!-- Introduced at Mockito-5.12 -->
+            <properties><version.bytebuddy>1.14.15</version.bytebuddy></properties>
         </profile>
         <profile>
             <id>bytebuddy_1.14.12</id><!-- Introduced at Mockito-5.11 -->
