--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Regular test on jdk-8
         run: mvn test | grep --line-buffered -v Download
       - name: Test on jdk-21 - install-scenarios included
-        run: mvn test -o -P jdk_21 -P enableInstallScenarios
+        run: mvn test -P jdk_21 -P enableInstallScenarios -P junit_latest
       - name: Test on jdk-6 - with recent bytebuddy
         run: mvn test -o -P jdk_6
       - name: Test on jdk-6 - with old bytebuddy
