--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
     <version>1.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>LazyParams</name>
-    <url>http://lazyparams.org</url>
+    <!-- <url>http://lazyparams.org</url> -->
+    <url>https://github.com/lazyparams/lazyparams</url>
     <description>
 
         /* One-liner parametrization of unit tests: */
