--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </developers>
 
     <properties>
-        <version.platform>[1.7.2,2)</version.platform>
+        <version.platform>[1.7.2,6)</version.platform>
         <version.junit5>[5.7.2,6)</version.junit5>
         <version.bytebuddy>1.15.11</version.bytebuddy>
         <version.mockito>4.11.0</version.mockito>
@@ -571,9 +571,12 @@ reevaluated once-in-while by running tests with this profile enabled!
         -->
         <profile>
             <id>junit_latest</id>
+        </profile>
+        <profile>
+            <id>junit_5.13.4</id>
             <properties>
-                <version.junit5>[5.13-RC,6)</version.junit5>
-                <version.platform>[1.13-RC,2)</version.platform>
+                <version.junit5>5.13.4</version.junit5>
+                <version.platform>1.13.4</version.platform>
             </properties>
         </profile>
         <profile>
